--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Students</string>
     <string name="title_activity_registration">Registration</string>
     <string name="title_activity_login">Login</string>
+    <string name="title_activity_student">Student</string>
     <string name="login">Login</string>
     <string name="password">Password</string>
     <string name="sing_in">Sing In</string>
