--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="sing_in">Sing In</string>
     <string name="sing_up">Sing Up</string>
     <string name="confirm">Confirm</string>
+    <string name="title_activity_students">Students</string>
 </resources>
