feat(Common): Implemented mock links from group to student

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="sing_up">Sing Up</string>
     <string name="confirm">Confirm</string>
     <string name="title_activity_students">Students</string>
+    <string name="title_activity_groups">Groups</string>
 </resources>
